[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/EnemyWave.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Level2.gd" type="Script" id=4]

[node name="Level2" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 544, 696 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 544, 696 )

[node name="EnemyWave" parent="." instance=ExtResource( 3 )]
position = Vector2( 352, 4 )

[node name="EnemyWave2" parent="." instance=ExtResource( 3 )]
position = Vector2( -148, 4 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
